Bug fixes and adjustments to message logs